[gd_scene load_steps=17 format=3 uid="uid://ca1uerg8uy26a"]

[ext_resource type="Script" path="res://Buddy/Scripts/Buddy.gd" id="1_crrf2"]
[ext_resource type="Texture2D" uid="uid://b8ot8hosov37o" path="res://Sprites/Buddy/buddy_sheet.png" id="2_tatpv"]
[ext_resource type="Texture2D" uid="uid://u63ipxrni6gn" path="res://Sprites/Background/Scene/Buddy/Hats/hat_beret.png" id="3_2y0lr"]
[ext_resource type="Texture2D" uid="uid://cyxiygp5g83jk" path="res://Sprites/Background/Scene/Buddy/Hats/hat_bowl.png" id="3_xrrgr"]

[sub_resource type="Animation" id="Animation_jpnki"]
resource_name = "HandsDownAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_uiqas"]
resource_name = "HandsUpAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_f7etr"]
resource_name = "IdleAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 0, 1]
}

[sub_resource type="Animation" id="Animation_ayw3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x3vdn"]
_data = {
"HandsDownAnimation": SubResource("Animation_jpnki"),
"HandsUpAnimation": SubResource("Animation_uiqas"),
"IdleAnimation": SubResource("Animation_f7etr"),
"RESET": SubResource("Animation_ayw3a")
}

[sub_resource type="Animation" id="Animation_m0nbo"]
resource_name = "IdleAnimation"
length = 1.3645
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.0943),
"transitions": PackedFloat32Array(3.36359, 8.28211),
"update": 1,
"values": [8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HatBeretBuddy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.13333, 1.23333),
"transitions": PackedFloat32Array(8.33763e-05, 1e-05),
"update": 0,
"values": [Vector2(-1, -3.08), Vector2(-1, -6.36)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HatBowlBuddy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.06667, 1.2),
"transitions": PackedFloat32Array(1e-05, 1e-05),
"update": 0,
"values": [Vector2(1, -3), Vector2(1, -4.96)]
}

[sub_resource type="Animation" id="Animation_rkfxc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HatBeretBuddy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -3.08)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HatBowlBuddy:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_masba"]
_data = {
"IdleAnimation": SubResource("Animation_m0nbo"),
"RESET": SubResource("Animation_rkfxc")
}

[sub_resource type="Animation" id="Animation_dv0fa"]
resource_name = "BlinkAnimation"
length = 4.4135
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.83333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 4]
}

[sub_resource type="Animation" id="Animation_hn1v0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Budd1Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wdke5"]
_data = {
"BlinkAnimation": SubResource("Animation_dv0fa"),
"RESET": SubResource("Animation_hn1v0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_aocr4"]
radius = 24.0208

[node name="Buddy" type="CharacterBody2D"]
position = Vector2(438, 171)
script = ExtResource("1_crrf2")

[node name="HandsDownAnimation" type="AnimationPlayer" parent="." groups=["HandsDown"]]
libraries = {
"": SubResource("AnimationLibrary_x3vdn")
}

[node name="HandsUpAnimation" type="AnimationPlayer" parent="." groups=["HandsUp"]]
libraries = {
"": SubResource("AnimationLibrary_x3vdn")
}

[node name="IdleAnimation" type="AnimationPlayer" parent="." groups=["Idle"]]
libraries = {
"": SubResource("AnimationLibrary_masba")
}

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wdke5")
}

[node name="Budd1Sprite" type="Sprite2D" parent="."]
position = Vector2(-1, -3)
scale = Vector2(1.84375, 1.60547)
texture = ExtResource("2_tatpv")
hframes = 4
vframes = 3
frame = 5

[node name="Buddy1Shape" type="CollisionShape2D" parent="."]
position = Vector2(-2, 1)
shape = SubResource("CircleShape2D_aocr4")

[node name="Hunger75" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -176.0
offset_top = -37.0
offset_right = -18.0
offset_bottom = -14.0
text = "I'm decently hungry."

[node name="Hunger50" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -151.0
offset_top = -38.0
offset_right = -16.0
offset_bottom = -15.0
text = "I'm pretty hungry"

[node name="Hunger25" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -147.0
offset_top = -37.0
offset_right = -22.0
offset_bottom = -14.0
text = "I'm very hungry!"

[node name="Dead" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -90.0
offset_top = -41.0
offset_right = -19.0
offset_bottom = -18.0
text = "I be dead"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.762
autostart = true

[node name="Full" type="Label" parent="."]
unique_name_in_owner = true
visible = false
offset_left = -128.0
offset_top = -66.0
offset_right = 59.0
offset_bottom = -17.0
text = "Im full now, 
thank you:3"

[node name="HatBeretBuddy" type="Sprite2D" parent="." groups=["HatBeretBuddy"]]
visible = false
position = Vector2(-1, -3.08)
scale = Vector2(1.53125, 1.5)
texture = ExtResource("3_2y0lr")

[node name="HatBowlBuddy" type="Sprite2D" parent="." groups=["HatBowlBuddy"]]
visible = false
position = Vector2(1, -3)
scale = Vector2(1.41768, 1.79541)
texture = ExtResource("3_xrrgr")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="Hunger75" method="_on_timer_timeout"]
